# cloudio_fw_v63x

./: .env  .gitignore  CMakeLists copy.txt  provision_tests.sh  sdkconfig  sdkconfig.old  sdkconfig_v1_wifi_prov
components/get_time/: CMakeLists.txt  ping_time.c
components/get_time/include/: ping_time.h
components/wifi_prov_mgr/: CMakeLists.txt  app_wifi.c
components/wifi_prov_mgr/include/: app_wifi.h
main/: 1Kconfig copy.projbuild_back  CMakeLists copy.txt  CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  qualification_app_main.c
main/certs/: aws_codesign.crt
main/core/extra/: aws_config_handler.c  button_press.c  buzzer.c  device_config.c  get_time.c  json_payload.c  ldo_control.c  led.c  psm_routine.c  sensors copy.c  sensors.c  uart_handler copy 2.c  uart_handler copy.c  uart_handler.c  vinit.c
main/core/include/: aws_config_handler.h  button_press.h  buzzer.h  device_config.h  get_time.h  json_payload.h  ldo_control.h  led.h  psm_routine.h  sensors.h  uart_handler.h  vinit.h
main/core/libraries/chip_system/: reset_reason.c  reset_reason.h
main/core/libraries/device_sleep/: dev_sleep.c  dev_sleep.h
main/core/libraries/nvs_ops/: nvs_data_ops.c  nvs_data_ops.h
main/core/libraries/processing/: calc_median.c  calc_median.h
main/core/libraries/watchdog/: dev_wdt.c  dev_wdt.h
main/networking/mesh_sensa/: CMakeListsBCK.txt  get_mesh_data.c  get_mesh_data.h  messaging.c  messaging.h
main/networking/modbus/: mb_master.c  mb_master.h  mb_uart_test copy.c  mb_uart_test.c  mb_uart_test.h  packed_data_handler.c  packed_data_handler.h  slave.c  slave.h
main/networking/mqtt/: core_mqtt_agent_manager.c  core_mqtt_agent_manager_config.h
main/networking/wifi/: connect_spec.c  connect_spec.h  data_store_nvs.c  http_server.c  scan.c  vmesh.c  vmesh.h
main/networking/wifi copy/: app_homekit.c  app_priv.h  app_wifi copy.c  app_wifi copy.h  app_wifi.c  app_wifi.h  app_wifi_ble_prov.c  app_wifi_ble_prov.h  app_wifi_with_homekit.c  app_wifi_with_homekit.h  espnow_example.h  espnow_example_main.c  nvs_platform.c  nvs_platform.h  vmesh copy 2.c  vmesh copy 2.h  vmesh copy 3.c  vmesh copy 3.h  vmesh copy 4.c  vmesh copy 4.h  vmesh copy.c  vmesh copy.h  vmesh.c
main/tasks/ota_over_mqtt_demo/: ota_config.h  ota_mqtt.c  ota_mqtt.h
main/tasks/shadow_pub/: shadow_pub.c  shadow_pub.h  shadow_pub_conf.h
